--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+.under_construction{
+    font-family: calibri;
+    text-align:center;
+}
+
+
 body {
 	margin: 0px;
-	background-color: #333;
-	color: white;
+	background-color: white;
+	color: black;
 }
 
 .center {text-align: center;}
@@ -9,7 +15,7 @@ body {
 #parallax {
 	position: relative;
 	width: 100%;
-	padding: 300px 0;
+	padding: 225px 0;
 	text-align: center;
 	background: url('Images/paralax_numbers.jpg') no-repeat center -0%;
 	background-size: 100%;
@@ -20,7 +26,7 @@ body {
 #parallax_2{
 	position: relative;
 	width: 100%;
-	padding: 350px 0;
+	padding: 220px 0;
 	text-align: center;
 	background: url('Images/paralax_helmet.jpg') no-repeat center 30%;
 	background-size: 100%;
@@ -43,11 +49,11 @@ body {
     padding-left: 5px;
     padding-right: 5px;
 }
-.nav_a, a:visited {
+.nav_a{
 	color: white;
 	flex-grow: 1;
 	font-family: Calibri Light;
-	font-size: 21px;
+	font-size: 17px;
 	padding: 5px;
 	margin: 10px 5px 10px 5px;
 	background-color: #999;
@@ -61,7 +67,7 @@ body {
 }
 
 .logo_image {
-    height:60px;
+    height:50px;
     padding: 5px;
 }
 
@@ -116,7 +122,7 @@ footer a:visited{
     
 }
 #footer{
-    background-color:whitesmoke;
+    background-color:gray;
     
     
 }
@@ -145,6 +151,7 @@ footer a:visited{
 
 #faq{
     padding: 150px;
+    background-color: white;
 }
 
 #faq h1{
@@ -170,16 +177,286 @@ footer a:visited{
 }
 
 
+/*Slideshow Styling*/
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+/*Slideshow Styling*/
+
+/*Login Styling*/
+
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #e60000;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
 
 
 
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/*Zoom Animation*/
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+}
+    
+@keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+}
 
 
+/*Login Styling*/
+
+#login_button{
+    margin-top: 200px;
+    margin-left: 47%;
+}
+
+.normal_a{
+    color:black;
+    text-decoration:none;
+}
+
+#shutterfly_link{
+    font-family: calibri light;
+    font-weight: normal;
+    padding-top: 50px;
+    text-align:center;
+}
 
 
+/* Become a Sponsor Styling */
 
+#become_a_sponsor{
+    padding: 150px;
+}
 
+#become_a_sponsor_title{
+    font-family: Calibri;
+}
 
+#become_a_sponsor_text{
+    font-family: calibri light;
+}
 
+/*Outreach*/
+#outreach{
+    padding: 150px;
+}
 
+#outreach h2{
+    font-family: calibri;
+}
 
+#outreach p{
+    font-family: calibri light;
+}
+
+/* Workshop Styling*/
+
+#workshop{
+    padding:150px;
+}
+
+#workshop h2{
+    font-family:calibri;
+    font-weight: normal;
+    
+}
+
+#workshop h3{
+    font-family:calibri;
+    font-weight: normal;
+}
+
+#workshop h4{
+    font-family: calibri;
+    font-weight: normal;
+}
+
+#workshop p{
+    font-family: calibri light;
+}
